# kent

./: .gitignore  .pre-commit-config.yaml  README.md  TEST_AUDIT.md  pyproject.toml
.claude/: settings.json
docs/: Makefile  complexity_management.md
docs/source/: conf.py  index.rst
kent/: cli.py  data_types.py  discovery.py  preps.py
kent/common/: checked_html.py  data_models.py  decorators.py  deferred_validation.py  exceptions.py  h11_patch.py  lxml_page_element.py  page_element.py  param_models.py  parser.py  request_manager.py  searchable.py  selector_observer.py  selector_utils.py  speculation_types.py  speculative.py  xpath_observer.py
kent/demo/: __init__.py  app.py  data.py  models.py  run-persistent.py  run-playwright.py  run_demo.py  scraper.py
kent/driver/: _speculation_support.py  archive_handler.py  async_driver.py  callbacks.py  interstitials.py  sync_driver.py
scripts/: generate_cli_reference.py  migrate_incidental_storage_15_to_16.py  migrate_speculation_protocol_16_to_17.py
tests/: conftest.py  mock_server.py  organization.md  test_02_navigating_request.py  test_03_nonnavigating_request.py  test_04_archive_request.py  test_05_accumulated_data.py  test_06_aux_data.py  test_07_callbacks.py  test_08_structural_errors.py  test_09_data_validation.py  test_10_transient_exceptions.py  test_13_archive_callback.py  test_14_lifecycle_hooks.py  test_15_priority_queue.py  test_16_deduplication.py  test_18_permanent_data.py  test_19_step_decorators.py  test_async_driver.py  test_demo.py  test_entry_decorator.py  test_hypothesis_page_identity.py  test_hypothesis_worker_page_registry.py  test_lxml_page_element.py  test_page_element.py  test_playwright_db_persistence.py  test_playwright_driver_integration.py  test_playwright_form_submit.py  test_playwright_tab_forking.py  test_rate_limiting.py  test_searchable_fields.py  test_selector_observer.py  test_selector_utils.py  test_single_page.py  test_speculate_decorator.py  test_step_decorator_playwright_features.py  test_stop_event.py  test_via_field.py  test_xpath_observer.py  utils.py
tests/data_types/: test_accumulated_data.py  test_archive_request.py  test_aux_data.py  test_basescraper_introspection.py  test_nonnavigating_request.py
tests/decorators/: test_entry.py  test_step.py
tests/demo/: conftest.py  test_add_params_non_advancing.py  test_demo.py
(+397 files in other folders)
