[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "kent"
version = "0.1.0"
description = "Scraper-driver framework for structured web scraping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=5.2",
    "pydantic>=2.12.5",
    "typing-extensions>=4.0.0",
    "cssselect",
    "sqlmodel>=0.0.32",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.57.0",
    "pyrate-limiter>=3.9.0",
]
dev-driver = [
    "aiosqlite>=0.22.1",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "zstandard>=0.25.0",
    "click>=8.0.0",
    "warcio>=1.7.5",
]
web = [
    "fastapi>=0.128.0",
    "jinja2",
]

[project.scripts]
ldd-debug = "kent.driver.dev_driver.cli:main"

[dependency-groups]
dev = [
    "kent[playwright,dev-driver,web]",
    "pytest",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.0",
    "types-lxml>=2025.11.25",
    "aiohttp>=3.13.3",
    "jsondiff>=2.2.1",
    "ruff>=0.15.0",
    "sphinx-immaterial>=0.13.9",
    "sphinxcontrib-mermaid>=2.0.0",
    "sphinx-autobuild>=2024.10.3",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore:'count' is passed as positional argument:DeprecationWarning",
]

[tool.setuptools]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.ruff]
line-length = 79
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.per-file-ignores."kent/driver/dev_driver/cli/__init__.py" = [
  "E402",
  "F401",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
  # printf-string-formatting
  "UP031",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
